--- a/experiments/instruction_visualization/instruction_visualize.ipynb
+++ b/experiments/instruction_visualization/instruction_visualize.ipynb
@@ -52,7 +52,7 @@
     "import json\n",
     "from tqdm import tqdm\n",
     "\n",
-    "generated_data_path = \"/mnt/16t/oyx/EasyInstruct/data/evol_instruct_70k.json\"\n",
+    "generated_data_path = \"/mnt/16t/oyx/EasyInstruct/data/evol_instruct_5k.jsonl\"\n",
     "if generated_data_path.endswith(\".jsonl\"):\n",
     "    machine_generated_tasks = [json.loads(l) for l in open(generated_data_path, \"r\")]\n",
     "elif generated_data_path.endswith(\".json\"):\n",
@@ -132,7 +132,7 @@
     "# df[\"blank\"] = \"ROOT\"\n",
     "# df = phrases.groupby([\"verb\", \"noun\"]).size().sort_values(ascending=False).head(5).reset_index().rename(columns={0: \"count\"})\n",
     "\n",
-    "df = df[df[\"count\"] > 30]\n",
+    "df = df[df[\"count\"] > 5]\n",
     "fig = px.sunburst(df, path=['verb', 'noun'], values='count')\n",
     "# fig.update_layout(uniformtext=dict(minsize=10, mode='hide'))\n",
     "fig.update_layout(\n",
